# getdata

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: fetch_nflx_example.py
src/stock_analysis/: api.py  cli.py  dates.py  engine.py  http.py  options_math.py
src/stock_analysis/sources/: nasdaq.py  yahoo_finance.py
